--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -73,6 +73,12 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
+
+    {{#if logged_in}}
+      Howdy, {{fname}}!<br>
+      <a href="/users/sign-out">Sign Out</a>
+    {{/if}}
+
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOGIN <span class="caret"></span></a>
@@ -104,6 +110,7 @@
               <button type="submit" class="btn btn-default">Sign in</button>
             </div>
           </div>
+          <a href="users/password-new">Forgot your password?</a>
         </form>
         </ul>
         </li>
@@ -113,7 +120,7 @@
         </div><!-- /.navbar-collapse -->
         
         </div>
-    </div><!-- /.c
+    </div>
     <!- /.container -->
 </nav>
 
