--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,55 +2,43 @@
 <html lang="en">
 
 <head>
+<title>CesarCells</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <title>CesarCells</title>
+<link href="css/scrolling-nav.css" rel="stylesheet">
+<link href="public/css/style.css" rel="stylesheet">
+<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+<script src="js/jquery.js" type="text/javascript"></script>
 
-    <!-- Custom CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.css"> -->
+<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    
-   <script src="helpers/handlebars-helpers.js" type="text/javascript"
+<script src="js/bootstrap.min.js"></script>
+<script src="js/login-modal.js"></script>
 
+<script src="/js/jquery.easing.min.js"></script>
+
+<script src="js/scrolling-nav.js"></script>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+<script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
 </head>
 
 
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+    
+    <div class="container">  
 
-
-        <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/login-modal.js"></script>
-
-    <!-- Scrolling Nav JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-
-    <script src="js/scrolling-nav.js"></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-    <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
     {{{body}}}
+    </div>
 
 </body>
 </html>
