--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+<div class="container">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -74,10 +75,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
 
-    {{#if logged_in}}
-      Howdy, {{fname}}!<br>
-      <a href="/users/sign-out">Sign Out</a>
-    {{/if}}
+ 
 
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
@@ -117,13 +115,12 @@
         <li><a href="/users/sign_up">SIGNUP</a></li>
     </ul>
     </div>
-        </div><!-- /.navbar-collapse -->
+        </div>
         
         </div>
-    </div>
-    <!- /.container -->
-</nav>
-
+    
+</nav> 
+</div>
 <!-- Intro Section -->
 <section id="intro" class="intro-section">
     <div class="container">
