--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,23 +10,23 @@
 <meta name="author" content="">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
 
-<link href="css/scrolling-nav.css" rel="stylesheet">
-<link href="public/css/style.css" rel="stylesheet">
+<link href="/css/scrolling-nav.css" rel="stylesheet">
+<link href="/css/style.css" rel="stylesheet">
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
-<script src="js/jquery.js" type="text/javascript"></script>
+<script src="/js/jquery.js" type="text/javascript"></script>
 
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 
-<script src="js/bootstrap.min.js"></script>
-<script src="js/login-modal.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/login-modal.js"></script>
 
 <script src="/js/jquery.easing.min.js"></script>
 
-<script src="js/scrolling-nav.js"></script>
+<script src="/js/scrolling-nav.js"></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
 </head>
@@ -34,11 +34,11 @@
 
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+    {{> nav}}
     
-    <div class="container">  
-
+        
     {{{body}}}
-    </div>
 
+    {{> footer}}
 </body>
 </html>
