--- a/views/users/sign_up.handlebars
+++ b/views/users/sign_up.handlebars
@@ -1,32 +1,32 @@
-
-
 <section id='userRegister'>
   <div id='userForm'>
   <br>
-  <h3>Welcome to the sign-up page!</h3>
-    <form class='create-update-form ' action="/users/sign_up" method="post" autocomplete="on">
+  <h1>Welcome to the sign-up page!</h1>
+    <form class='create-update-form' action="/users/sign_up" method="post" autocomplete="on">
+
+    <h3> Sign Up, it's free</h3>
 
       <div class="form-group">
         <label for="uname">Username: </label>
-        <input type="text" id="uname" name="username" required="true" placeholder="Enter Username" autofocus>
+        <input type="text" id="uname" name="username" required="true" class="form-control" placeholder="Enter Username" autofocus>
       </div>
       
       <div id='email' class="form-group">
         <label for="em">Email: </label>
-        <input type="email" id="e-mail" name="email" placeholder="Enter Email" required >
+        <input type="email" id="e-mail" name="email" class="form-control" placeholder="Enter Email" required >
       </div>
           
       <div class="form-group">
         <label for="pass">Password: </label>
-        <input title="Password must contain at least 6 characters, including UPPER/lowercase and numbers" type="password" id="pass" name="password" placeholder='Enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" onchange="form.confirmPassword.pattern = this.value;">
+        <input title="Password must contain at least 6 characters, including UPPER/lowercase and numbers" type="password" id="pass" name="password" class="form-control" placeholder='Enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" onchange="form.confirmPassword.pattern = this.value;">
       </div>
 
       <div class="form-group">
         <label for="pass">Password Confirmation: </label>
-        <input title="Please enter the same Password as above" type="password" id="confirmPass" name="confirmPassword" placeholder='Re-enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
+        <input title="Please enter the same Password as above" type="password" id="confirmPass" name="confirmPassword" class="form-control" placeholder='Re-enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
       </div>
      
-      <button type="submit">Sign Up!</button> 
+      <button type="submit" class="btn btn-default">Sign Up!</button> 
       <br> 
       <p> By registering you are agreeing to our <a target="_blank" href="#">Privacy Policy</a> and <a target="_blank" href="#">Terms and Conditions.</a> </p>
     </form>
