--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,9 @@
 }
 body {
   color: black;
+  font-size: 25px;
+ /* line-height:1;
+  font:normal 0.9em/1em"Helvetica Neue", Helvetica, Arial, sans-serif;*/
 }
 #header-details-form {
   margin-top: 120px;
@@ -22,4 +25,75 @@ body {
 .reset-password-form {
   margin-top: 30px;
   width: 400px;
+}
+ol, ul {
+  list-style:none;
+}
+strong {
+  font-weight:700;
+}
+#frame {
+  max-width:620px;
+  width:auto;
+  border:1px solid #ccc;
+  background:#fff;
+  padding:10px;
+  margin:3px;
+}
+h1 {
+    font:normal bold 2em/1.8em"Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-align:left;
+    border-bottom:1px solid #999;
+    padding:0;
+    width:auto
+}
+h2 {
+    font:italic bold 1.3em/1.2em"Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding:0;
+    text-align:center;
+    margin:20px 0;
+}
+p.pager {
+    margin:5px 0 5px;
+    font:bold 1em/1em"Helvetica Neue", Helvetica, Arial, sans-serif;
+    color:#999;
+}
+img.question-image {
+    display:block;
+    max-width:250px;
+    margin:10px auto;
+    border:1px solid #ccc;
+    width:100%;
+    height:auto;
+}
+#choice-block {
+    display:block;
+    list-style:none;
+    margin:0;
+    padding:0;
+}
+#submitbutton {
+    background:#5a6b8c;
+}
+#submitbutton:hover {
+    background:#7b8da6;
+}
+#explanation {
+    margin:0 auto;
+    padding:20px;
+    width:75%;
+}
+.choice-box {
+    display:block;
+    text-align:center;
+    margin:8px auto;
+    padding:10px 0;
+    border:1px solid #666;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+.panel-footer {
+  height: 300px;
 }
