--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-lg-12">
            
-              
+              {{> search_bar}}
             </div>
         </div>
     </div>
