--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -35,7 +35,7 @@
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="#">Lutein & Zeaxathin Food Database</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/tools/stemcell_assessment.handlebars">Find a Stem Cell Treatment</a></li>
+                <li><a href="/test">Find a Stem Cell Treatment</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">23AndMe SNP Table</a></li>
                 <li role="separator" class="divider"></li>
