--- a/views/tools/stemcell_assessment.handlebars
+++ b/views/tools/stemcell_assessment.handlebars
@@ -1,4 +1,7 @@
-{{username}}
+create an array of forms
+
+
+
 <div class="primary-forms">
       <div class="quizArea">
        <div id="start" class="assess-questions">
