--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -33,9 +33,11 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
+                <li><a href="#">All Tools</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="#">Lutein & Zeaxathin Food Database</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/test">Find a Stem Cell Treatment</a></li>
+                <li><a href="/tools/start-health-assessment">Find a Stem Cell Treatment</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">23AndMe SNP Table</a></li>
                 <li role="separator" class="divider"></li>
