--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <script src="/js/jquery.js" type="text/javascript"></script>
-<script src="/js/scripts/q-dropdowns.js" type="text/javascript"></script>
+<script src="/js/scripts/assessment_questions.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 
 <script src="/js/bootstrap.min.js"></script>
