--- a/views/tools/stemcell_assessment.handlebars
+++ b/views/tools/stemcell_assessment.handlebars
@@ -6,7 +6,7 @@
     <div class="survey-header-wrapper">
         <div class="survey-header">
             <h2>Survey: Stargardts</h2>
-            <a class="quit js-quit-survey" href="#">Back</a>
+            <a class="quit js-quit-survey" href="/tools/start-health-assessment">Back</a>
         </div>
     </div>
       <div class="modal-content">
@@ -23,11 +23,11 @@
               <div class="blockG" id="rotateG_08"></div>
             </div>
           </div>
+          <form id="quiz-form" method="post" action="">
           <div class="quiz" id="quiz" data-toggle="buttons">
             <div class="modal-header">
                 <h3> Do you have a clinical diagnosis of typical autosomal recessive Stargardt macular dystrophy?</h3>
             </div>
-            <form id="quiz-form" method="post" action="">
               <label class="element-animation1 btn btn-lg btn-primary btn-block">
                 <span class="btn-label"><i class="glyphicon glyphicon-chevron-right"></i></span> 
                 <input type="radio" name="q1_answer" value="Yes">    Yes
@@ -36,8 +36,8 @@
                 <span class="btn-label"><i class="glyphicon glyphicon-chevron-right"></i></span> 
                 <input type="radio" name="q1_answer" value="No">    No
               </label>
-            </form>
           </div>
+          </form>
         </div>
       <div class="modal-footer text-muted">
         <span id="answer"></span>
