--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,16 @@
 #userRegister {
   margin-top: 100px;
 }
+
+div.container-fluid.bg-info {
+    background-color: #f7f9fa;
+}
+nav.navbar.navbar-default.navbar-fixed-top {
+    background-color: #ffffff;
+}
+.panel-default {
+    background-color: #f7f9fa;
+}
 .details-new-form {
   margin-top: 30px;
   width: 500px;
@@ -9,7 +19,8 @@
 }
 body {
   color: black;
-  font-size: 20px;
+  background-color: #f7f9fa;
+  /*font-size: 20px;*/
  /* line-height:1;
   font:normal 0.9em/1em"Helvetica Neue", Helvetica, Arial, sans-serif;*/
 }
@@ -43,7 +54,7 @@ strong {
 h1 {
     font:normal bold 2em/1.8em"Helvetica Neue", Helvetica, Arial, sans-serif;
     text-align:left;
-    border-bottom:1px solid #999;
+    /*border-bottom:1px solid #999;*/
     padding:0;
     width:auto
 }
@@ -97,6 +108,7 @@ img.question-image {
 .panel-footer {
   height: 300px;
   margin-top: 90px;
+  background-color: #ffffff;
 }
 #start-panel-head {
   margin-top: 200px;
@@ -114,7 +126,7 @@ img.question-image {
 div.col-xs-6.col-md-3 {
   background-color: #ffffff;
   padding: 45px;
-  border:1px solid #999;
+  border:6px solid #f7f9fa;
 }
 .page-header {
   margin-top: 150px;
