--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
 <script src="/js/jquery.js" type="text/javascript"></script>
 <script src="/js/scripts/assessment_questions.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+<!-- <script src="/data/stargardtsQuestions.js" type="text/javascript"></script> -->
 
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/login-modal.js"></script>
