--- a/views/partials/search_bar.handlebars
+++ b/views/partials/search_bar.handlebars
@@ -1,20 +1,10 @@
-<form method="get" action=" " class="" id="" name="">
-  <div class="row">
-    <div class="col-xs-5">
-      <div class="form-group">
-        <select id="gmap_type" class="c-select" data-live-search="true" data-width="400px" style="height: 80px; font-size: 30px">
-          <option selected>Choose a Disease</option>
-           <option data-tokens="Stargardts Disease">Stargardts Disease</option>
-           <option data-tokens="Glaucoma">Glaucoma</option>
-           <option data-tokens="Retinitis Pigmentosa">Retinitis Pigmentosa</option>
-           <option data-tokens="Age Related Macular Degeneration">Age Related Macular Degeneration</option>
-        </select> 
+<form class="input-searchbox" role="search" method="get" action="">
+  <div class="form-group form-group-lg">
+      <label class="col-sm-2 control-label" for="formGroupInputLarge">
+      </label>
+      <div class="col-sm-10">
+        <input class="form-control" type="text" id="formGroupInputLarge" placeholder="example: Stargardts" :focus>
       </div>
-    </div>
-    <div class="col-xs-3">
-      <div class="input-group">
-      <button type="submit" class="btn btn-default" style="height: 80px; width: 160px; font-size: 30px">Submit</button>
-      </div>
-    </div>
   </div>
+  <button type="button" class="btn btn-default btn-lg active">Search</button>
 </form>
