--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,91 @@
 #userRegister {
   margin-top: 100px;
 }
+/*searchbar*/
+/*body {
+    padding: 40px 0px;   
+}*/
+.container-search {
+    width: 530px;
+}
+#search-btn {
+    text-decoration: none;
 
+
+}
+#search-ahref {
+    text-decoration: none;
+
+}
+#search {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    text-decoration: none;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+
+    -webkit-transform: translate(0px, -100%) scale(0, 0);
+    -moz-transform: translate(0px, -100%) scale(0, 0);
+    -o-transform: translate(0px, -100%) scale(0, 0);
+    -ms-transform: translate(0px, -100%) scale(0, 0);
+    transform: translate(0px, -100%) scale(0, 0);
+    
+    opacity: 0;
+}
+
+#search.open {
+    -webkit-transform: translate(0px, 0px) scale(1, 1);
+    -moz-transform: translate(0px, 0px) scale(1, 1);
+    -o-transform: translate(0px, 0px) scale(1, 1);
+    -ms-transform: translate(0px, 0px) scale(1, 1);
+    transform: translate(0px, 0px) scale(1, 1); 
+    opacity: 1;
+}
+
+#search input[type="search"] {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    color: rgb(255, 255, 255);
+    background: rgba(0, 0, 0, 0);
+    font-size: 60px;
+    font-weight: 300;
+    /*text-align: center;*/
+    border: 0px;
+    margin: 0px auto;
+    /*margin-top: -51px;
+    padding-left: 30px;
+    padding-right: 30px;*/
+    outline: none;
+    align-content: center;
+}
+#search .btn {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    margin-top: 61px;
+    margin-left: -45px;
+
+}
+#search .close {
+    position: fixed;
+    top: 15%;
+    right: 15px;
+    color: #fff;
+    background-color: #428bca;
+    border-color: #357ebd;
+    opacity: 1;
+    padding: 10px 17px;
+    font-size: 27px;
+}
+/*searchbar ends*/
 div.container-fluid.bg-info {
     background-color: #f7f9fa;
 }
@@ -127,6 +211,7 @@ div.col-xs-6.col-md-3 {
   background-color: #ffffff;
   padding: 45px;
   border:6px solid #f7f9fa;
+  
 }
 .page-header {
   margin-top: 150px;
@@ -152,18 +237,21 @@ label.btn {
     -o-transform: scale(1.0);
     -webkit-transition-duration: .3s;
     -moz-transition-duration: .3s;
-    -o-transition-duration: .3s
+    -o-transition-duration: .3s;
+    color: black;
 }
 
 label.btn:hover {
     text-shadow: 0 3px 2px rgba(0,0,0,0.4);
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
-    -o-transform: scale(1.1)
+    -o-transform: scale(1.1);
+    background-color: #f7f9fa;
 }
 label.btn-block {
     text-align: left;
-    position: relative
+    position: relative;
+    background-color: #f7f9fa;
 }
 
 label .btn-label {
@@ -173,7 +261,8 @@ label .btn-label {
     display: inline-block;
     padding: 0 10px;
     background: rgba(0,0,0,.15);
-    height: 100%
+    height: 100%;
+
 }
 
 label .glyphicon {
@@ -283,15 +372,23 @@ label .glyphicon {
         -ms-transform: translate(0px,0px)
     }
 }
+div.modal-content {
+    border-top-style: solid;
+    border-top-width: 5px;
+    border-top-color: darksalmon;
+}
+.dropdown-toggle:hover {
+    color: darksalmon;
+}
 .assessment-headings {
   text-align: center;
 }
 .modal-dialog {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  /*margin-top: 40px;
+  margin-bottom: 40px;*/
   height: 400px;
   width: 800px;
-  background-color: #ffffff;
+  /*background-color: #ffffff;*/
 }
 .modal-header {
     background-color: transparent;
