redoing models and schema

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,12 +52,13 @@
 #search input[type="search"] {
     position: absolute;
     top: 50%;
+    left: 3px;
     width: 100%;
     color: rgb(255, 255, 255);
     background: rgba(0, 0, 0, 0);
     font-size: 60px;
     font-weight: 300;
-    /*text-align: center;*/
+    text-align: center;
     border: 0px;
     margin: 0px auto;
     /*margin-top: -51px;
