--- a/views/partials/search_bar.handlebars
+++ b/views/partials/search_bar.handlebars
@@ -1,9 +1,7 @@
-<div class="container">
-        <div class="container-search">
-                <ul class="nav navbar-nav navbar-right">
-                    <button id="search-btn" class="btn btn-primary btn-lg active"><li><a href="#search" id="search-ahref">Search</a></li></button>
-                </ul>
-        </div>
+<div class="container-search">
+    <ul class="nav navbar-nav navbar-right">
+        <button id="search-btn" class="btn btn-primary btn-lg active"><li><a href="" id="search-ahref">Search</a></li></button>
+    </ul>
 </div>
 
 
