--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -6,10 +6,12 @@
 
   <div class="row" id="start-panel-begin">
     <div class="col-md-12">Begin Assessment
-      <form method="get" action="/tools/stemcell_assessment">
-        <label>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </label>
+      <form method="get" action="/tools/stemcell-assessment">
+        <div class="form-group">
+          
+        
+        </div>
+            <button type="submit" class="btn btn-default">Submit</button>
       </form>
     </div>
   </div>
