changed models user and trial

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,15 @@
 <section id="intro" class="intro-section">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-8">
            
-              {{> search_bar}}
+            <h1> WELCOME </h1>
+
+            </div>
+            <div class="col-lg-4">
+            
+              <a id="home-find-clinic" href="/users/sign-in"><button type="button" id="home-find-trail-btn"class="btn btn-primary btn-lg">FIND A CLINICAL TRIAL</a></button>
+
             </div>
         </div>
     </div>
