--- a/views/users/sign_up.handlebars
+++ b/views/users/sign_up.handlebars
@@ -11,6 +11,11 @@
         <input type="text" id="uname" name="username" required="true" class="form-control" placeholder="Enter Username" autofocus>
       </div>
       
+      <div class="form-group">
+        <label for="u-age">Age: </label>
+        <input type="number" id="u-age" name="userage" required="true" class="form-control" placeholder="Enter Age" autofocus>
+      </div>
+
       <div id='email' class="form-group">
         <label for="em">Email: </label>
         <input type="email" id="e-mail" name="email" class="form-control" placeholder="Enter Email" required >
@@ -25,6 +30,7 @@
         <label for="pass">Password Confirmation: </label>
         <input title="Please enter the same Password as above" type="password" id="confirmPass" name="confirmPassword" class="form-control" placeholder='Re-enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
       </div>
+
      
       <button type="submit" class="btn btn-default">Sign Up!</button> 
       <br> 
