--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -70,42 +70,10 @@
                 </ul>
             </li>
         </ul>
-
-       
-
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOGIN <span class="caret"></span></a>
+        <li class="">
+        <a href="/users/sign-in" class="" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false">LOGIN</span></a>
         <ul class="dropdown-menu">
-        <form class="form-horizontal" action="/users/login" method="POST">
-          <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
-              <input type="password" class="form-control" id="inputPass" name="password" placeholder="Password">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"> Remember me
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" class="btn btn-default">Sign in</button>
-            </div>
-          </div>
-          <a href="/users/password_new">Forgot your password?</a>
-        </form>
       </li>
       </ul>
       <li><a href="/users/sign_up">SIGNUP</a></li>
