--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
 
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-    {{> nav}}
+    {{> main-nav}}
     
         
     {{{body}}}
