--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,7 @@
 <div class="panel panel-default">
-  <div class="panel-body"></div>
-  <div class="panel-footer">Designed by  <a href="www.vincentjporta.com">vincentjporta.com</a>
-  <a target="_blank" href="#">Privacy Policy</a> and <a target="_blank" href="#">Terms and Conditions.</a> 
+  <div class="panel-footer"> 
+  
   </div>
+  <a target="_blank" href="#">Privacy Policy</a> and <a target="_blank" href="#">Terms and Conditions.</a> 
+  <a href="www.vincentjporta.com">Built By Vincent</a>
 </div>
