--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -16,10 +16,10 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            
+        <ul class="nav navbar-nav navbar-right">            
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources & Support <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" id="a-dash" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-life-ring" aria-hidden="true"></i>
+Resources & Support <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="#">What is Stargardts?</a></li>
                 <li><a href="#">What to expect during a clinical trial?</a></li>
@@ -31,7 +31,8 @@
               </ul>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
+Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="#">All Tools</a></li>
                 <li role="separator" class="divider"></li>
@@ -42,10 +43,13 @@
                 <li><a href="#">23AndMe SNP Table</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Vitamin A Food Database</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Take The Amsler Test</a></li>
               </ul>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" id="a-dash-two" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-child" aria-hidden="true"></i>
+About Us <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="#">Mission</a></li>
                 <li role="separator" class="divider"></li>
@@ -56,7 +60,8 @@
               </ul>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clinics & Treatments <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" id="a-dash-three"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-eye" aria-hidden="true"></i>
+Treatments <span class="caret"></span></a>
                 <ul class="dropdown-menu" aria-labelledby="dLabel">
                     <li><a href="#">Stem Cell</a></li>
                     <li role="separator" class="divider"></li>
@@ -69,14 +74,24 @@
                     <li><a href="#">Retinal Physicians</a></li>
                 </ul>
             </li>
+            <li class="dropdown">
+            <a href="/users/sign-in" class="" id="a-dash-four" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
+MY ACCOUNT </a>
+              <ul class="dropdown-menu">
+                <li role="separator" class="divider"></li>
+                <li><a href="#">My Profile</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Documents</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Terms and Conditions</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Contact Support</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="/">Sign Out</a></li>
+              </ul>
+            </li>
         </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="">
-        <a href="/users/sign-in" class="" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false">LOGIN</span></a>
-        <ul class="dropdown-menu">
-      </li>
-      </ul>
-      <li><a href="/users/sign_up">SIGNUP</a></li>
+     
     </ul>
     </div>
     </nav>
