--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,79 @@
 #userRegister {
   margin-top: 100px;
 }
+/*dashboard home*/
+.h1-dashboard {
+    margin-top: 50px;
+    text-align: center;
+    line-height: 3;
+    font-size: 45px;
+    /*z-index: 100;*/
+    /*position: absolute;*/
+}
+#img-dash {
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+#img-dash2 {
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+#img-dash3 {
+    margin-left: 10px;
+}
+#img-dash4 {
+    margin-left: 10px;
+}
+#row-top-dash-images {
+    margin-top: 165px;
+}
+#row-btm-dash-images {
+    margin-bottom: 45px;
+}
+#col-one-dash-images {
+    background-color: white;
+    width: 680px;
+    border-radius: 10px;
+
+}
+#col-two-dash-images {
+    background-color: white;
+    width: 680px;
+    border-radius: 10px;
+    height: 220px;
+}
+.nav.navbar-nav.navbar-right {
+    background-color: #005470;
+    margin-top: 25px; 
+    border-radius: 7px;
+}
+#a-dash {
+    color: white;
+}
+#a-dash-one {
+    color: white;
+}
+#a-dash-two {
+    color: white;
+}
+#a-dash-three {
+    color: white;
+}
+#a-dash-four {
+    color: white;
+}
+#h1-images {
+    font-size: 20px;
+    background-color: white;
+    text-align: center;
+    margin-left: 150px;
+}
+.img-desc {
+    font-size: 14px;
+}
+
+
+/*dashboard home ends*/
 
 /*home page sign-in form*/
 form#sign-in-form.form-horizontal {
@@ -23,8 +96,8 @@ nav.navbar.navbar-default.navbar-fixed-top {
 }
 body {
   color: black;
-  background-color: #f7f9fa;
-  /*font-size: 20px;*/
+  background-color: #e8efef;
+  font-size: 20px;
  /* line-height:1;
   font:normal 0.9em/1em"Helvetica Neue", Helvetica, Arial, sans-serif;*/
 }
@@ -110,9 +183,8 @@ img.question-image {
     border-radius: 5px;
 }
 .panel-footer {
-  height: 300px;
-  margin-top: 90px;
-  background-color: #ffffff;
+  height: 700px;
+  background-color: #005470;
 }
 #start-panel-head {
   margin-top: 200px;
@@ -162,18 +234,25 @@ label.btn {
 }
 #home-find-clinic {
     text-decoration: none;
+    background-color: #005470;
+    color: white;
+}
+#home-find-trail-btn {
+    background-color: #005470;
 }
 label.btn:hover {
-    text-shadow: 0 3px 2px rgba(0,0,0,0.4);
+    /*text-shadow: 0 3px 2px rgba(0,0,0,0.4);*/
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
-    background-color: #f7f9fa;
+    /*background-color: #f7f9fa;*/
 }
 label.btn-block {
     text-align: left;
     position: relative;
-    background-color: #f7f9fa;
+    /*background-color: #f7f9fa;*/
+    background-color: white;
+    color: black;
 }
 
 label .btn-label {
@@ -182,7 +261,7 @@ label .btn-label {
     top: 0;
     display: inline-block;
     padding: 0 10px;
-    background: rgba(0,0,0,.15);
+    /*background: rgba(0,0,0,.15);*/
     height: 100%;
 
 }
