--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,21 +4,25 @@
 <section id="intro" class="intro-section">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-12">
            
-            <h1> WELCOME </h1>
-
-            </div>
-            <div class="col-lg-4">
+            <h1> CONNECTING YOU TO LIFE CHANGING TREATMENTS </h1> <br>
             
-              <a id="home-find-clinic" href="/users/sign-in"><button type="button" id="home-find-trail-btn"class="btn btn-primary btn-lg">FIND A CLINICAL TRIAL</a></button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+           
+            <a id="home-find-clinic" href="/users/sign-in"><button type="button" id="home-find-trail-btn" class="btn btn-primary btn-lg">FIND A CLINICAL TRIAL</a></button>  
 
             </div>
         </div>
+        
     </div>
 </section>
 
 <!-- About Section -->
+<A name="about-main"></A>
 <section id="about" class="about-section">
     <div class="container">
         <div class="row">
@@ -29,18 +33,32 @@
     </div>
 </section>
 
-<!-- Services Section -->
+<!-- Tools Section -->
+<A name="tools-main"></A>
+<section id="tools-main" class="services-section">
+    <div class="container" id="tools-main">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Tools Section</h1>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Treatments Section -->
+<A name="treatments-main"></A>
 <section id="services" class="services-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Services Section</h1>
+                <h1>Treatments Section</h1>
             </div>
         </div>
     </div>
 </section>
 
 <!-- Contact Section -->
+<A name="contact-main"></A>
 <section id="contact" class="contact-section">
     <div class="container">
         <div class="row">
