--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -11,8 +11,8 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- <link href="/css/scrolling-nav.css" rel="stylesheet"> -->
+<script src="https://use.fontawesome.com/67714d146e.js"></script>
+<link href="/css/scrolling-nav.css" rel="stylesheet">
 <link href="/css/style.css" rel="stylesheet">
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -27,7 +27,7 @@
 
 <script src="/js/jquery.easing.min.js"></script>
 
-<!-- <script src="/js/scrolling-nav.js"></script> -->
+<script src="/js/scrolling-nav.js"></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
 </head>
@@ -35,10 +35,11 @@
 
 
 <body>
-
+{{> nav}}
         
     {{{body}}}
 
     {{> footer}}
+
 </body>
 </html>
