--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -5,14 +5,16 @@
         </div>
         <div class="col-md-6" id="col-one-dash-images">
             <div class="col-xs-9">
-                <h2 id="h1-images">Find A Clinical Trial</h2>
+                <h2 id="h1-images">What you can do</h2>
             </div>
             <a href="/">
-            <img src="/assets/images/stemcells-purple.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash">
+            <img src="/assets/images/stemcells-purple.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
+            <h3><span>Find a Clinical Trial</span></h3>
             </a>
 
             <a href="/">
             <img src="http://www.stemcellactionnetwork.org/stemcellaction.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
+            <h3 id="top-right-h3"><spanid="top-right-span">Import Your Genetic Data</span></h3>
             </a>
         </div>
     </div>
@@ -23,11 +25,13 @@
         <div class="col-md-6" id="col-two-dash-images"> 
             <a href="/">
 
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9pXf3XJcjOr23rpmE1guhcS8XU05WPE0UN2MCLzAXQ6dQiS96" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9pXf3XJcjOr23rpmE1guhcS8XU05WPE0UN2MCLzAXQ6dQiS96" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3"/>
+            <h3><span>Take the Amsler Test</span></h3>
             </a>
 
             <a href="/">
-            <img src="http://flexogenix.com/wp-content/uploads/2015/01/16.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash4">
+            <img src="http://flexogenix.com/wp-content/uploads/2015/01/16.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash4"/>
+            <h3 id="top-right-h3"><spanid="top-right-span">Upload Documents</span></h3>
             </a>
         </div>
     </div>
