--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -76,7 +76,7 @@ Treatments <span class="caret"></span></a>
             </li>
             <li class="dropdown">
             <a href="/users/sign-in" class="" id="a-dash-four" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
-MY ACCOUNT </a>
+My Account </a>
               <ul class="dropdown-menu">
                 <li role="separator" class="divider"></li>
                 <li><a href="#">My Profile</a></li>
