--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -1,17 +1,35 @@
   <div class="row" id="start-panel-head">
-    <div class="col-md-12">SEE IF YOU QUALIFY FOR A STARGARDTS TRIAL
+    <div class="col-md-6 col-md-offset-3">
+
+      <div class="panel panel-default">
+        <div class="panel-body">
+        <h2>SEE IF YOU QUALIFY FOR A STARGARDTS TRIAL</h2>
+        <img src="/assets/images/stemcells-purple.png">
+        </div>
+    </div>
       <img>
     </div>
   </div>
 
   <div class="row" id="start-panel-begin">
-    <div class="col-md-12">Begin Assessment
+    <div class="col-md-6 col-md-offset-3">
+    <h2>Stargardts Disease Assessment</h2>
       <form method="get" action="/tools/stemcell-assessment">
         <div class="form-group">
-          
-        
+          <div class="panel panel-default">
+            <div class="panel-body">
+            <p class="lead">
+            By answering the questions in this assessment you will be able to match with life changing clinical trials. 
+
+            The average time to complete this assessment is 5-6 minutes.
+
+           
+
+            </p>
+          </div>
         </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+      <button type="submit" class="btn btn-default">Start</button>
       </form>
-    </div>
   </div>
+</div>
