--- a/views/tools/stemcell_assessment.handlebars
+++ b/views/tools/stemcell_assessment.handlebars
@@ -20,7 +20,7 @@
           <form id="quiz-form" method="post" action="">
             <div class="quiz" id="quiz" data-toggle="buttons">
               <div class="modal-header">
-                  <h3> Do you have a clinical diagnosis of typical autosomal recessive Stargardt macular dystrophy?</h3>
+                  <h4> Do you have a clinical diagnosis of typical autosomal recessive Stargardts macular dystrophy?</h4>
               </div>
                 <label class="element-animation1 btn btn-lg btn-primary btn-block">
                   <span class="btn-label"><i class="glyphicon glyphicon-chevron-right"></i></span> 
@@ -42,27 +42,27 @@
 <div class="row">
   <div class="col-xs-6 col-md-3">
     <div class="caption">
-      <h3>Thumbnail label</h3>
+      <h2>Thumbnail label</h2>
       <p></p>
       <p class="text-center">%</p>
     </div>
   </div>
   <div class="col-xs-6 col-md-3">
     <div class="caption">
-      <h3>Thumbnail label</h3>
+      <h2>Thumbnail label</h2>
       <p></p>
       <p class="text-center">%</p>
     </div>
   </div>
   <div class="col-xs-6 col-md-3">
   <div class="caption">
-    <h3>Thumbnail label</h3>
+    <h2>Thumbnail label</h2>
     <p></p>
     <p class="text-center">%</p>
   </div>  </div>
   <div class="col-xs-6 col-md-3">
   <div class="caption">
-    <h3>Thumbnail label</h3>
+    <h2>Thumbnail label</h2>
     <p></p>
     <p class="text-center">%</p>
   </div>
@@ -71,28 +71,28 @@
 <div class="row">
   <div class="col-xs-6 col-md-3">
   <div class="caption">
-    <h3>Thumbnail label</h3>
+    <h2>Thumbnail label</h2>
     <p></p>
     <p class="text-center">%</p>
   </div>
   </div>
   <div class="col-xs-6 col-md-3">
   <div class="caption">
-    <h3>Thumbnail label</h3>
+    <h2>Thumbnail label</h2>
     <p></p>
     <p class="text-center">%</p>
   </div>
   </div>
   <div class="col-xs-6 col-md-3">
   <div class="caption">
-    <h3>Thumbnail label</h3>
+    <h2>Thumbnail label</h2>
     <p></p>
     <p class="text-center">%</p>
   </div>
   </div>
   <div class="col-xs-6 col-md-3">
   <div class="caption">
-    <h3>Thumbnail label</h3>
+    <h2>Thumbnail label</h2>
     <p></p>
     <p class="text-center">%</p>
   </div>
