--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
 <!-- Navigation -->
-
+<div class="jumbotron">
+   <h1></h1>
+ </div>
 <!-- Intro Section -->
 <section id="intro" class="intro-section">
     <div class="container">
@@ -10,13 +12,7 @@
             
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-           
-            <a id="home-find-clinic" href="/users/sign-in"><button type="button" id="home-find-trail-btn" class="btn btn-primary btn-lg">FIND A CLINICAL TRIAL</a></button>  
-
-            </div>
-        </div>
+        
         
     </div>
 </section>
