--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -1,3 +1,7 @@
+  <div class="jumbotron">
+     <h1></h1>
+   </div>
+
   <div class="row" id="start-panel-head">
     <div class="col-md-6 col-md-offset-3">
 
