--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -38,9 +38,9 @@ Tools <span class="caret"></span></a>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Lutein & Zeaxathin Food Database</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/tools/start-health-assessment">Find a Stem Cell Treatment</a></li>
+                <li><a href="/tools/all-trials">Find a Clinical Trial</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">23AndMe SNP Table</a></li>
+                <li><a href="/tools/genetic">23AndMe SNP Table</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Vitamin A Food Database</a></li>
                 <li role="separator" class="divider"></li>
@@ -78,6 +78,8 @@ Treatments <span class="caret"></span></a>
             <a href="/users/sign-in" class="" id="a-dash-four" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
 My Account </a>
               <ul class="dropdown-menu">
+                <li role="separator" class="divider"></li>
+                <li><a href="/users/dashboard">Dashboard</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">My Profile</a></li>
                 <li role="separator" class="divider"></li>
