--- a/views/users/sign_in.handlebars
+++ b/views/users/sign_in.handlebars
@@ -1,4 +1,4 @@
-<form id="sign-in-form" class="form-horizontal" action="/users/login" method="POST">
+<form id="sign-in-form" class="form-horizontal" action="/users/dashboard" method="POST">
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
     <div class="col-sm-10">
