react axios get request to our api works

--- a/views/tools/all_trials.handlebars
+++ b/views/tools/all_trials.handlebars
@@ -38,7 +38,7 @@
                 </div> 
             </div>
             <div class="name">
-             <a href="http://ai.camp" target="_blank" class="website">Stargardts</a>
+             <a href="http://ai.camp" target="_blank" class="website">Disease 2</a>
              <div class="date">Tue Jul 12</div>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 </div> 
             </div>
             <div class="name">
-             <a href="http://ai.camp" target="_blank" class="website">Stargardts</a>
+             <a href="http://ai.camp" target="_blank" class="website">Disease 3</a>
              <div class="date">Tue Jul 12</div>
             </div>
         </div>
