--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -18,7 +18,7 @@
   <div class="row" id="start-panel-begin">
     <div class="col-md-6 col-md-offset-3">
     <h2>Stargardts Disease Assessment</h2>
-      <form method="get" action="/tools/stemcell-assessment">
+      <form method="get" action="/indexOne.html">
         <div class="form-group">
           <div class="panel panel-default">
             <div class="panel-body">
